--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components; 
 @tailwind utilities; 
+
+
+.box{
+  width: 300px;
+  height:200px;
+  background-color:black;
+  }
