--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,11 @@
 @tailwind utilities; 
 
 
-.box{
-  width: 300px;
-  height:200px;
-  background-color:black;
-  }
+@layer components{
+  
+
+}
+
+.testClass{ 
+  color:green;
+}
