Poppins font imported

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -11227,6 +11227,10 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.font-Poppins {
+  font-family: Poppins, sans-serif;
+}
+
 .font-thin {
   font-weight: 100;
 }
@@ -41857,6 +41861,10 @@ video {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .sm\:font-Poppins {
+    font-family: Poppins, sans-serif;
+  }
+
   .sm\:font-thin {
     font-weight: 100;
   }
@@ -72403,6 +72411,10 @@ video {
 
   .md\:font-mono {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
+  .md\:font-Poppins {
+    font-family: Poppins, sans-serif;
   }
 
   .md\:font-thin {
@@ -102953,6 +102965,10 @@ video {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .lg\:font-Poppins {
+    font-family: Poppins, sans-serif;
+  }
+
   .lg\:font-thin {
     font-weight: 100;
   }
@@ -133501,6 +133517,10 @@ video {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .xl\:font-Poppins {
+    font-family: Poppins, sans-serif;
+  }
+
   .xl\:font-thin {
     font-weight: 100;
   }
@@ -164047,6 +164067,10 @@ video {
 
   .\32xl\:font-mono {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
+  .\32xl\:font-Poppins {
+    font-family: Poppins, sans-serif;
   }
 
   .\32xl\:font-thin {
