--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,10 @@
 @tailwind components; 
 @tailwind utilities; 
 
-
-@layer components{
-  
-
+@layer base {
+  body { 
+    @apply font-Poppins text-cgrey
+  }
 }
 
 .testClass{ 
