styled work img, user img, and username

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,17 @@
   body { 
     @apply font-Poppins text-cgrey
   }
+
 }
 
 .testClass{ 
   color:green;
+}
+
+.imgFit{
+  @apply object-cover h-full w-full
+}
+
+.cShadow{
+  
 }
