--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31366,6 +31366,13 @@ body {
   color:green;
 }
 
+.imgFit{
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
