--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31373,6 +31373,13 @@ body {
   width: 100%
 }
 
+.cShadow{
+}
+
+.devicon-git-plain path {
+  fill: #FFFFFF;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
