--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31380,6 +31380,10 @@ body {
   fill: #FFFFFF;
 }
 
+.devicon-javascript-plain {
+  width: 3rem;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
