--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31429,6 +31429,30 @@ inputDiv{
   margin-bottom: 1.5rem
 }
 
+.defaultButton{
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity))
+}
+
+.defaultButton:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+
+.defaultButton {
+  border-radius: 0.375rem;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  height: 2.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
