--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31687,6 +31687,10 @@ inputDiv{
   padding-right: 0.75rem;
 }
 
+.noResize{
+  resize: none;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
