--- a/src/styles.css
+++ b/src/styles.css
@@ -46,15 +46,15 @@ inputDiv{
 }
 
 .defaultButton{
-  @apply flex items-center mx-6 hover:bg-blue-400 bg-gray-200 rounded-md h-10 px-3 font-semibold text-lg
+  @apply flex items-center mx-6 hover:bg-blue-400 bg-gray-200 rounded-md h-10 px-3 font-semibold text-lg focus:outline-none
 }
 
 .buttonNoMargin{
-  @apply flex items-center hover:bg-blue-400 bg-gray-200 rounded-md h-10 px-3 font-semibold text-lg
+  @apply flex items-center hover:bg-blue-400 bg-gray-200 rounded-md h-10 px-3 font-semibold text-lg focus:outline-none
 }
 
 .buttonBlue{
-  @apply flex items-center mx-6 hover:bg-blue-400 bg-blue-200 rounded-md h-10 px-3 font-semibold text-lg
+  @apply flex items-center mx-6 hover:bg-blue-400 bg-blue-200 rounded-md h-10 px-3 font-semibold text-lg focus:outline-none
 
 }
 
