--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31736,6 +31736,76 @@ inputDiv{
   resize: none;
 }
 
+.languageCard{
+  --tw-bg-opacity: 1;
+  background-color: rgba(191, 219, 254, var(--tw-bg-opacity))
+}
+
+.languageCard:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+
+.languageCard {
+  border-radius: 0.375rem;
+  margin: 1.5rem;
+  padding: 1.5rem;
+}
+
+@media (min-width: 1024px) {
+  .languageCard {
+    height: 11rem;
+    width: 11rem;
+  }
+}
+
+@media (min-width: 1285px) {
+  .languageCard {
+    height: 13rem;
+    width: 13rem;
+  }
+}
+
+.languageCardText{
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0.25rem;
+  font-style: italic
+}
+
+@media (min-width: 1024px) {
+  .languageCardText {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1285px) {
+  .languageCardText {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+languageCardIcon{
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity))
+}
+
+@media (min-width: 1024px) {
+  languageCardIcon {
+    font-size: 6rem;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 1285px) {
+  languageCardIcon {
+    font-size: 8rem;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
