--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,15 @@ inputDiv{
 .noResize{
   resize: none;
 }
+
+.languageCard{
+  @apply lg:h-44 lg:w-44 xl:w-52 xl:h-52 bg-blue-200 hover:bg-blue-500 rounded-md m-6 p-6
+}
+
+.languageCardText{
+  @apply mb-0 mt-1 font-medium lg:text-base xl:text-lg italic
+}
+
+languageCardIcon{
+  @apply lg:text-8xl xl:text-9xl text-white
+}
