--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -31631,10 +31631,6 @@ inputDiv{
   border-radius: 0.375rem;
   display: flex;
   align-items: center;
-  font-weight: 600;
-  height: 2.5rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -31651,8 +31647,19 @@ inputDiv{
 
 @media (min-width: 1024px) {
   .defaultButton {
+    font-weight: 500;
+    height: 2rem;
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1285px) {
+  .defaultButton {
+    font-weight: 600;
+    height: 2.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
