--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,7 @@ inputDiv{
 }
 
 .buttonNoMargin{
-  @apply flex items-center hover:bg-blue-400 bg-gray-200 rounded-md h-10 px-3 font-semibold text-lg lg:text-base  focus:outline-none
+  @apply flex items-center hover:bg-blue-400 bg-gray-200 rounded-md lg:h-8 xl:h-10 px-3 lg:font-medium xl:font-semibold xl:text-lg lg:text-base focus:outline-none
 }
 
 .buttonBlue{
